--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
+                        <div class="navbar-nav ms-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
@@ -71,7 +72,7 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">Forex Trading Mentors</h5>
+                            <h5 class="text-white text-uppercase">Forex Trading Mentorship</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">ENHANCE YOUR TRADING SKILLS WITH
                                 KMDN
                                 TRADING.
@@ -85,8 +86,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">Forex Trading Mentors</h5>
-                            <h1 class="display-2 text-white text-uppercase mb-md-4">BECOME A BEST VERSION OF YOURSELF.
+                            <h5 class="text-white text-uppercase">Forex Trading Mentorship</h5>
+                            <h1 class="display-2 text-white text-uppercase mb-md-4">BECOME THE BEST VERSION OF YOURSELF.
                             </h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Join Us</a>
                             <a href="/contact.html" class="btn btn-light py-md-3 px-md-5">Contact Us</a>
@@ -103,6 +104,59 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <!-- TradingView Widget BEGIN -->
+        <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <script type="text/javascript"
+                src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+                    {
+                        "symbols": [
+                            {
+                                "proName": "FOREXCOM:SPXUSD",
+                                "title": "S&P 500"
+                            },
+                            {
+                                "proName": "FOREXCOM:NSXUSD",
+                                "title": "US 100"
+                            },
+                            {
+                                "proName": "FX_IDC:EURUSD",
+                                "title": "EUR/USD"
+                            },
+                            {
+                                "proName": "BITSTAMP:BTCUSD",
+                                "title": "Bitcoin"
+                            },
+                            {
+                                "proName": "BITSTAMP:ETHUSD",
+                                "title": "Ethereum"
+                            },
+                            {
+                                "description": "GBP/USD",
+                                "proName": "FX:GBPUSD"
+                            },
+                            {
+                                "description": "USD/JPY",
+                                "proName": "OANDA:USDJPY"
+                            },
+                            {
+                                "description": "USD/CAD",
+                                "proName": "FX:USDCAD"
+                            },
+                            {
+                                "description": "AUD/USD",
+                                "proName": "FX:AUDUSD"
+                            }
+                        ],
+                            "showSymbolLogo": true,
+                                "colorTheme": "dark",
+                                    "isTransparent": false,
+                                        "displayMode": "adaptive",
+                                            "locale": "en"
+                    }
+                </script>
+        </div>
+        <!-- TradingView Widget END -->
     </div>
     <!-- Carousel End -->
 
@@ -111,9 +165,97 @@
     <div class="container-fluid p-5">
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
-                <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover;">
+                <!-- TradingView Widget BEGIN -->
+                <div class="tradingview-widget-container">
+                    <div class="tradingview-widget-container__widget"></div>
+                    <script type="text/javascript"
+                        src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
+                            {
+                                "colorTheme": "dark",
+                                    "dateRange": "1D",
+                                        "showChart": true,
+                                            "locale": "en",
+                                                "width": "100%",
+                                                    "height": "100%",
+                                                        "largeChartUrl": "",
+                                                            "isTransparent": false,
+                                                                "showSymbolLogo": true,
+                                                                    "showFloatingTooltip": false,
+                                                                        "plotLineColorGrowing": "rgba(41, 98, 255, 1)",
+                                                                            "plotLineColorFalling": "rgba(41, 98, 255, 1)",
+                                                                                "gridLineColor": "rgba(240, 243, 250, 0)",
+                                                                                    "scaleFontColor": "rgba(106, 109, 120, 1)",
+                                                                                        "belowLineFillColorGrowing": "rgba(41, 98, 255, 0.12)",
+                                                                                            "belowLineFillColorFalling": "rgba(41, 98, 255, 0.12)",
+                                                                                                "belowLineFillColorGrowingBottom": "rgba(41, 98, 255, 0)",
+                                                                                                    "belowLineFillColorFallingBottom": "rgba(41, 98, 255, 0)",
+                                                                                                        "symbolActiveColor": "rgba(41, 98, 255, 0.12)",
+                                                                                                            "tabs": [
+                                                                                                                {
+                                                                                                                    "title": "Indices",
+                                                                                                                    "symbols": [
+                                                                                                                        {
+                                                                                                                            "s": "FOREXCOM:SPXUSD",
+                                                                                                                            "d": "S&P 500"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FOREXCOM:NSXUSD",
+                                                                                                                            "d": "US 100"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FOREXCOM:DJI",
+                                                                                                                            "d": "Dow 30"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "INDEX:NKY",
+                                                                                                                            "d": "Nikkei 225"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "INDEX:DEU40",
+                                                                                                                            "d": "DAX Index"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FOREXCOM:UKXGBP",
+                                                                                                                            "d": "UK 100"
+                                                                                                                        }
+                                                                                                                    ],
+                                                                                                                    "originalTitle": "Indices"
+                                                                                                                },
+                                                                                                                {
+                                                                                                                    "title": "Forex",
+                                                                                                                    "symbols": [
+                                                                                                                        {
+                                                                                                                            "s": "FX:EURUSD",
+                                                                                                                            "d": "EUR/USD"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FX:GBPUSD",
+                                                                                                                            "d": "GBP/USD"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FX:USDJPY",
+                                                                                                                            "d": "USD/JPY"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FX:USDCHF",
+                                                                                                                            "d": "USD/CHF"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FX:AUDUSD",
+                                                                                                                            "d": "AUD/USD"
+                                                                                                                        },
+                                                                                                                        {
+                                                                                                                            "s": "FX:USDCAD",
+                                                                                                                            "d": "USD/CAD"
+                                                                                                                        }
+                                                                                                                    ],
+                                                                                                                    "originalTitle": "Forex"
+                                                                                                                }
+                                                                                                            ]
+                            }
+                        </script>
                 </div>
+                <!-- TradingView Widget END -->
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
@@ -271,6 +413,8 @@
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-secondary mb-2" href="/index.html"><i
                                     class="bi bi-circle-fill text-primary me-2"></i>Home</a>
+                            <a class="text-secondary mb-2" href="/service.html"><i
+                                    class="bi bi-circle-fill text-primary me-2"></i>Service</a>
                             <a class="text-secondary mb-2" href="/about.html"><i
                                     class="bi bi-circle-fill text-primary me-2"></i>About Us</a>
                             <a class="text-secondary" href="/contact.html"><i
@@ -310,8 +454,9 @@
                 </div>
             </div>
 
+
             <script type="text/javascript" src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
-                id="aisensy-wa-widget" widget-id="XeBsxf">
+                id="aisensy-wa-widget" widget-id="M5e94F">
                 </script>
 
         </div>
