--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,11 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <div class="navbar-nav ms-auto py-0">
+                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
                         </div>
                         <a href="" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Join Us</a>
                     </div>
@@ -187,6 +188,8 @@
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-secondary mb-2" href="/index.html"><i
                                     class="bi bi-circle-fill text-primary me-2"></i>Home</a>
+                            <a class="text-secondary mb-2" href="/service.html"><i
+                                    class="bi bi-circle-fill text-primary me-2"></i>Service</a>
                             <a class="text-secondary mb-2" href="/about.html"><i
                                     class="bi bi-circle-fill text-primary me-2"></i>About Us</a>
                             <a class="text-secondary" href="/contact.html"><i
@@ -226,9 +229,11 @@
                 </div>
             </div>
 
+
             <script type="text/javascript" src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
-                id="aisensy-wa-widget" widget-id="XeBsxf">
+                id="aisensy-wa-widget" widget-id="M5e94F">
                 </script>
+
 
         </div>
     </div>
